<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyApp</string>
    <string name="listminut">Listminut</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="email">E-mail</string>
    <string name="pwd">Mot de passe</string>
    <string name="confirmPWD">Confirmer le mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="secondname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="register">Enregistrement gratuit</string>
    <string name="title_activity_inscription_page">Page inscription</string>
    <string name="failed">Echec</string>

    <!-- Requêtes sql -->

</resources>
