<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#03a9f4"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/listminut_logo"
        android:id="@+id/listminut_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pwd"
        android:hint="@string/pwd"
        android:textColorHint="#e1f5fe"
        android:drawableLeft="@drawable/password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColorHint="#e1f5fe"
        android:layout_above="@+id/pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/email"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:onClick="connexion"
        android:layout_below="@+id/pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/button"
        android:background="@drawable/button_default_bg"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:onClick="inscription"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button"
        android:layout_marginBottom="44dp"
        android:textSize="24dp"/>




</RelativeLayout>
